--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "esModuleInterop": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["*.test.ts", "*.test.tsx"]
+  "exclude": ["**/__tests__/**/*"]
 }
