Add demo and fix context issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "outDir": "dist",
     "esModuleInterop": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "demo/**/*.ts", "demo/**/*.tsx"]
 }
