--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
+    "start": "parcel demo/index.html -d demo/dist",
     "lint": "tslint -p .",
     "typecheck": "tsc --noEmit",
     "test": "jest",
@@ -20,6 +21,7 @@
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.5",
     "jest": "^24.9.0",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "ts-jest": "^24.1.0",
